--- a/notebooks/demo_init.ipynb
+++ b/notebooks/demo_init.ipynb
@@ -240,23 +240,23 @@
     "\n",
     "We used visual observation of the archetype visualizations in the pairwise comparison. If the chosen threshold is 0.9, then the two patterns below would be considered the same, even though they are actually different.\n",
     "\n",
-    "![img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
-    "![img-08](https://i.im.ge/2025/07/31/JtMjJG.img-008.png)\n",
+    "[img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
+    "[img-08](https://i.im.ge/2025/07/31/JtMjJG.img-008.png)\n",
     "\n",
     "If we choose a threshold of 0.91, then the following two pattern examples would be considered similar even though they are actually different.\n",
     "\n",
-    "![img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
-    "![img-10](https://i.im.ge/2025/07/31/JtMwdx.img-010.png)\n",
+    "[img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
+    "[img-10](https://i.im.ge/2025/07/31/JtMwdx.img-010.png)\n",
     "\n",
     "And if we choose a threshold of 0.92, then the two example images below would be considered the same, even though their structures are still different.\n",
     "\n",
-    "![img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
-    "![img-29](https://i.im.ge/2025/07/31/JtM6Pa.img-029.png)\n",
+    "[img-11](https://i.im.ge/2025/07/31/JtMU5W.img-011.png)\n",
+    "[img-29](https://i.im.ge/2025/07/31/JtM6Pa.img-029.png)\n",
     "\n",
     "Finally, we arrived at 0.93 as the threshold value for identifying similar patterns, based on an empirical process and expert review. As an example, the two images below would be considered the same using the 0.93 threshold. Structurally, the patterns are indeed similar.\n",
     "\n",
-    "![img-16](https://i.im.ge/2025/07/31/JtMtuy.img-016.png)\n",
-    "![img-33](https://i.im.ge/2025/07/31/JtMy9S.img-033.png)\n"
+    "[img-16](https://i.im.ge/2025/07/31/JtMtuy.img-016.png)\n",
+    "[img-33](https://i.im.ge/2025/07/31/JtMy9S.img-033.png)\n"
    ]
   },
   {
